# exastash

./: .gitignore  Cargo.toml  LICENSE  bump-version  make-sqlx-data  rust-toolchain.toml  sqlx-data.json  test_sql
.sqlx/: query-01a1dc2032e56a7b1efe6e0fc034cd8ac5a5a4a1c7cc761c091febc577a6dc06.json  query-01b695fc846b3afd59a4db38864285b265fdac2e4aab782c4aef8a75cbd1ad71.json  query-046e4360cf9f530580b3792ad82a7106e4d54d67bda98d284b4325afd400de68.json  query-049d054a5d3db6ef34c669271a833b692bca19c2ff73289b5045357dfad35648.json  query-06196c460c2c7d633f24549bc3ae73faad082add421dc9f030784a98717ea439.json  query-069c4f6f898fe2d998469294c2fc7bc89fd0d10caa11ee6c824698a86480ff39.json  query-10d155d077b18ed84592f2fc079ce6c9a1dcc4b4d4ce827979d8d4b6eb6d405d.json  query-11b0930f08850b575dde8682d65e1ea2ae1aa4bda15a68d5f128137507d5cf1f.json  query-126581f80e5769443907a9a954c5ca4c0973bbe9f2e30fa35f4adefbbba8534e.json  query-1377a63a172c475b1e4eb65d84e2cf973b2e9023881793e241a35787cb7dbcb1.json  query-17a9ebff5f4f93f3cad3e734b255b3d0cc31932da0abdb340be33bf45d1b67ab.json  query-1c2778a7f4c1c4a5b2cd3b067959eb42c40c2e78e884e46efa55099f28b17201.json  query-1de8adffe88aaa9ea4d2bc2885e558cddd0d856c0325c8d64a7211939d1fe868.json  query-29873006d4a63948e04ea45edc8c510a97f0f5af6adee5cd134e6cef47b9be5e.json  query-2a214a8abe3d5cfbcbc9400ad6b47d1aadf7199651e2a88fb6dc8eae98d0e6f8.json  query-2a41d2b5998146ce69d19d0ef27b398888e7d0ff04c192be79a90eda22abc7f3.json  query-31df2d0ae66d1487bf3b4897f264355748c972859de5c5b6e80d7b5132659ba0.json  query-36577dff838673966a7acea7278ed4497cc2c314beb355af91c74e44f1b895ab.json  query-4149ec9ec29a1bfa329265904b88465335f254f824c55b98d8a77d602ce4a2cd.json  query-42976fdeeab6799f8ae3fbf97db68ba24fa574fddc3518ee197e7dcc0c46a417.json  query-4ced3ba478e551d218fb89b2e92be8caf7eaf939bc98e2d26f85ff4dbb177131.json  query-4d7b5ff92b130bb02c95179efcb3956f3b6108d60e72ab0626c2cdfae8517d9c.json  query-4dc3a3ec2d98e27eb85becf54f55627f0bb2ffa32bf353e9d0297a6dba62180f.json  query-52a0572cf7969ecd1e08cd014b9b94a2ede01619c941347e2e34254fdee80ee4.json  query-52ec344420ee1f284b9636aa357eb021c2f7367c2f70df556f948a091c590da7.json  query-592385ce58aa575d218b81f73173e18fbfb1885fa8ed47cead91e6e547caa6cb.json  query-5c4417cc0d085897fa39f924887a882d8a32a453b9edd25f8a4e944825ee5fdb.json  query-5e0544568e554a61755c601d5a8423259c7d54c1f5aecb26774acda7d4b40e69.json  query-5ff6bf7d35af9ba4a7ed35da33b4da896641d7fc4a8f99ccc94e5842f7884484.json  query-661a7e609773b30c971c93932d5ee83f5cb79baff5076219eb75aedb332f3a6b.json  query-663d30f183d3e770b59b0a0e669765f2a6e40e9f252e64b903ff6e6d6edb5b30.json  query-6747757ede87f4e18d14bb2ed2cc0092c868b684a217c507438513453d6d6568.json  query-69443a7eb9f517cd773a671ce051e6abbc1515cd74091d77ae02d2da3cf848e7.json  query-6983161cc9aa7c4a50442be200c06e1f20579ff700ea5221b78bd07224c44918.json  query-74ba2b2015951d47af73e54612a9c38455768096b52a1899c2a36dc06c9fc627.json  query-7613d746ffa2dbb40647655f294571632dd6901a6c5dc8c079a39ac6f14346e1.json  query-77422ed001030187e184ac1ce71270f109f8a0b67282a05e92ff7cab26d433f9.json  query-7dbc1c237e4b97e20bc5d075227edc0e203e5341b596426bee172cc6f324f21b.json  query-80a1c9b1d71be7673b817e590d225d856013e17fbbef9edc857b44366a04f464.json  query-831d5727c5f31102e869e1bd3214a5ec9df9d43b1406c907d81cc5c3a739c5ae.json  (+46 more)
docs/: config.example.toml  config.toml.example  config.toml.sample  policy.example.js  policy.js.example
docs/nixpkgs/: README  ephemeralpg-make-the-periods-extension-available.patch
old/: mapping_idea.sql
old/schema/: mariadb.sql  postgresql.sql  test_dirents.sql  test_inodes.sql  test_storage_gdrive.sql
old/src/: universal_filename.rs
schema/: api.sql  dirents.sql  down.sql  exastash_versions.sql  extensions.sql  google_auth.sql  inodes.sql  inodes_views.sql  names.sql  postgresql.sql  schema.sql  storage_fofs.sql  storage_gdrive.sql  storage_inline.sql  storage_internetarchive.sql  storage_namedfiles.sql  test.sql  test_api.sql  test_dirents.sql  test_inodes.sql  test_names.sql  test_storage_gdrive.sql  test_storage_inline.sql  test_timespec64.sql  timespec64.sql  up.sql
src/: blake3.rs  conceal_size.rs  config.rs  crypto.rs  db.rs  fuse.rs  gdrive.rs  info.rs  lib.rs  main.rs  oauth.rs  padding.rs  path.rs  policy.rs  postgres.rs  ranges.rs  retry.rs  storage.rs  storage_read.rs  storage_write.rs  ts.rs  universal_filename.rs  util.rs  web.rs  windows_compat.rs
src/db/: dirent.rs  google_auth.rs  inode.rs  storage.rs  traversal.rs
src/db/storage/: fofs.rs  gdrive.rs  inline.rs  internetarchive.rs  namedfiles.rs
src/db/storage/gdrive/: file.rs
src/path/: windows_compatible.rs
src/storage/: delete.rs  read.rs  write.rs
trash/: errors.rs  mod.rs  toml-parsing.patch
