[package]
name = "exastash"
version = "2.0.1"
edition = "2018"
authors = ["Ivan Kozik <ivan@ludios.org>"]

[[bin]]
name = "es"
path = "src/main.rs"

[dependencies]
aes-ctr = "0.6"
async-trait = "0.1"
anyhow = "1.0"
async-recursion = "0.3"
byteorder = "1.3"
bytes = "0.5"
chrono = "0.4"
clap = "2"
crc32c = "0.5"
custom_debug_derive = "0.5"
data-encoding = "2"
directories = "3"
filetime = "0.2"
futures = "0.3"
futures-async-stream = "0.2"
gethostname = "0.2"
hex = "0.4"
hyper = "0.13"
hyper-rustls = "0.21"
libc = "0.2"
literally = "0.1"
log = "0.4"
md-5 = "0.9"
blake3 = "0.3"
mimalloc = { version = "0.1", default-features = false } # Turn off the default secure mode
num = "0.3"
num-format = { git = "https://github.com/ludios/num-format" } # Waiting for https://github.com/bcmyers/num-format/pull/20
once_cell = "1"
parking_lot = "0.11"
pin-project = "1.0"
quick-js = { version = "0.3.3", features = ["bigint", "chrono", "log"] }
rand = "0.7"
regex = "1"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "stream", "json"] }
ring = { git = "https://github.com/ludios/ring", branch = "prime" } # Waiting for https://github.com/briansmith/ring/pull/909
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-hex = "0.1"
serial_test = "0.5"
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json" ] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core", "fs", "io-util", "io-driver"] }
tokio-util = { version = "0.3", features = ["compat"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = "0.8"
yansi = "0.5"
yup-oauth2 = { git = "https://github.com/ludios/yup-oauth2", branch = "prime" }
zstd = "0.5"

# Disabled for now to improve build time while we're not working on the FUSE server
#polyfuse = { git = "https://github.com/ubnt-intrepid/polyfuse" }
#polyfuse-tokio = { git = "https://github.com/ubnt-intrepid/polyfuse" }

[dev-dependencies]
atomic-counter = "1.0"

[patch.crates-io]
# Need a matching version for the ring in
# reqwest -> hyper-rustls -> rustls -> ring
ring = { git = "https://github.com/ludios/ring", branch = "prime" }

[profile.dev]
# Reduce debug rebuild time
# https://github.com/rust-gamedev/wg/issues/50#issuecomment-527160611
debug = false

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
