[package]
name = "exastash"
version = "3.0.0"
edition = "2021"
authors = ["Ivan Kozik <ivan@ludios.org>"]

[[bin]]
name = "es"
path = "src/main.rs"

[dependencies]
aes = "0.8"
ctr = "0.9"
axum = "0.5"
axum-macros = "0.2"
atomic-counter = "1.0"
cipher = "0.4"
anyhow = "1.0"
async-recursion = "1.0"
byteorder = "1"
bytes = "1"
chrono = "0.4"
# https://github.com/clap-rs/clap/issues/3822
clap = { version = "~3.1", features = ["derive"] }
crc32c = "0.6"
custom_debug_derive = "0.5"
data-encoding = "2"
directories = "4"
filetime = "0.2"
futures = "0.3"
futures-async-stream = "0.2"
gethostname = "0.2"
hex = "0.4"
hyper = { version = "0.14", features = ["client"] }
hyper-rustls = { version = "0.23", features = ["webpki-roots"] }
libc = "0.2"
literally = "0.1"
log = "0.4"
md-5 = { version = "0.10", features = ["asm"] }
blake3 = "1"
mimalloc = { version = "0.1", default-features = false } # Turn off the default secure mode
num = "0.4"
num-format = { git = "https://github.com/ludios/num-format" } # Waiting for https://github.com/bcmyers/num-format/pull/20
once_cell = "1"
parking_lot = "0.12"
pin-project = "1.0"
quick-js = { version = "0.4", features = ["bigint", "chrono", "log"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
ring = { git = "https://github.com/briansmith/ring" } # Until 2896a014de94d670a6913156c9f31d8de8a2323b is in a release
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-hex = "0.1"
serial_test = "0.7"
smol_str = "0.1"
# use git until https://github.com/launchbadge/sqlx/issues/1579 is in a release
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "decimal", "uuid", "chrono", "json", "offline"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io", "codec", "compat"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.0"
yansi = "0.5"
yup-oauth2 = { git = "https://github.com/ludios/yup-oauth2", branch = "prime" }
zstd = "0.11"

# Disabled for now to improve build time while we're not working on the FUSE server
#polyfuse = { git = "https://github.com/ubnt-intrepid/polyfuse" }
#polyfuse-tokio = { git = "https://github.com/ubnt-intrepid/polyfuse" }

[patch.crates-io]
# Need a matching version for the ring in
# reqwest -> hyper-rustls -> rustls -> ring
ring = { git = "https://github.com/briansmith/ring" }

[profile.dev]
# Reduce debug rebuild time
# https://github.com/rust-gamedev/wg/issues/50#issuecomment-527160611
debug = false

# Optimize our dependencies (but not our own crate to avoid long rebuild times)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
