[package]
name = "exastash"
version = "3.2.2"
edition = "2021"
authors = ["Ivan Kozik <ivan@ludios.org>"]

[[bin]]
name = "es"
path = "src/main.rs"

[dependencies]
aes = "0.8"
ctr = "0.9"
axum = { version = "0.6", features = ["macros"] }
atomic-counter = "1"
cipher = "0.4"
anyhow = "1"
async-recursion = "1"
byteorder = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crc32c = "0.6"
custom_debug_derive = "0.5"
data-encoding = "2"
directories = "4"
filetime = "0.2"
futures = "0.3"
futures-async-stream = "0.2"
gethostname = "0.4.1"
hex = "0.4"
hyper = { version = "0.14", features = ["client"] }
hyper-rustls = { version = "0.23", features = ["webpki-roots"] }
libc = "0.2"
literally = "0.1"
log = "0.4"
md-5 = { version = "0.10", features = ["asm"] }
blake3 = "1"
mimalloc = { version = "0.1", default-features = false } # Turn off the default secure mode
num = "0.4"
once_cell = "1"
parking_lot = "0.12"
pin-project = "1"
quick-js = { version = "0.4", features = ["bigint", "chrono", "log"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream", "json"] }
ring = { git = "https://github.com/briansmith/ring" } # Until 2896a014de94d670a6913156c9f31d8de8a2323b is in a release
serde = "1"
serde_derive = "1"
serde_json = "1"
serde-hex = "0.1"
serial_test = "1"
smol_str = "0.1"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "decimal", "uuid", "chrono", "json", "offline"] }
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io", "codec", "compat"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1"
yansi = "0.5"
yup-oauth2 = { git = "https://github.com/ludios/yup-oauth2", branch = "prime" }
zstd = "0.12"

[patch.crates-io]
# Need a matching version for the ring in
# reqwest -> hyper-rustls -> rustls -> ring
ring = { git = "https://github.com/briansmith/ring" }

[profile.dev]
# Reduce debug rebuild time
# https://github.com/rust-gamedev/wg/issues/50#issuecomment-527160611
debug = false

# Optimize our dependencies (but not our own crate to avoid long rebuild times)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
